# asreview-simulation-my-plugin

./: .gitignore  pyproject.toml
src/asreview_simulationcontrib/my_plugin/: bal_custom_plugin_quad.py  bal_custom_subcommand.py  ofn_custom_fun.py  ofn_custom_impl.py  ofn_custom_params.py  ofn_custom_plugin_quad.py  ofn_custom_subcommand.py
src/asreview_simulationcontrib/my_plugin/bal/: bal_custom_impl.py  bal_custom_params.py  bal_custom_plugin_quad.py  bal_custom_pyll.py  bal_custom_subcommand.py
src/asreview_simulationcontrib/my_plugin/cli/: ofn_custom_subcommand.py
src/asreview_simulationcontrib/my_plugin/clr/: clr_custom_impl.py  clr_custom_params.py  clr_custom_plugin_quad.py  clr_custom_pyll.py  clr_custom_subcommand.py
src/asreview_simulationcontrib/my_plugin/fex/: fex_custom_impl.py  fex_custom_params.py  fex_custom_plugin_quad.py  fex_custom_pyll.py  fex_custom_subcommand.py
src/asreview_simulationcontrib/my_plugin/funcmaps/: get_default_params.py
src/asreview_simulationcontrib/my_plugin/ofn/: ofn_custom_params.py  ofn_custom_plugin_quad.py  ofn_custom_pyll.py  ofn_custom_subcommand.py
src/asreview_simulationcontrib/my_plugin/qry/: qry_custom_impl.py  qry_custom_params.py  qry_custom_plugin_quad.py  qry_custom_pyll.py  qry_custom_subcommand.py
src/asreview_simulationcontrib/my_plugin/sam/: sam_custom_impl.py  sam_custom_params.py  sam_custom_plugin_quad.py  sam_custom_pyll.py  sam_custom_subcommand.py
src/asreview_simulationcontrib/my_plugin/stp/: stp_custom_impl.py  stp_custom_params.py  stp_custom_plugin_quad.py  stp_custom_pyll.py  (+1 more)
(+1 files in other folders)
