[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "asreview-simulation-my-plugin"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "click ~= 8.0",
    "hyperopt"
]
description = "Plugin for asreview-simulate"

[project.optional-dependencies]
dev = [
    "pytest",
]

[project.entry-points."asreview_simulationcontrib.quads"]
ofn-custom = "asreview_simulationcontrib.my_plugin.ofn_custom_plugin_quad:ofn_custom_plugin_quad"

[tool.setuptools.packages.find]
where = ["src"]
